# kiisrv

./: .dockerignore  Cargo.toml  DOCUMENTATION_INDEX.md  Dockerfile  GITHUB_ACTIONS_SETUP.md  QUICK_START.md  README.md  VPS_DEPLOYMENT_UPDATES.md  build.sh  compose.dockerhub.yaml  compose.ghcr.yaml  compose.prod.yaml  compose.yaml  pull-and-tag.sh
.github/workflows/: docker-build-publish.yml
docs/: CONTAINERIZATION_CHANGES.md  CONTAINERIZATION_SUMMARY.md  CONTAINERIZED_DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_CONTEXT.md  GCC_COMPATIBILITY.md  GITHUB_ACTIONS_DEPLOYMENT.md  GITHUB_ACTIONS_SETUP.md  IMPLEMENTATION_NOTES.md  MODERNIZATION.md  README.md  RUNNING_LOCALLY.md
schema/: config.sqlite
src/: build.rs  kll.rs  lib.rs  main.rs  versions.rs
tests/: integration_test.rs
tests/web_latest/KType-NoAnimations/: KType-NoAnimations-0.kll
tests/web_latest/KType-Standard/: KType-Standard-0.kll
